# agent-native

./: .gitignore  .npmignore  .prettierignore  .tmp-p32-mui-capture.ts  .vercelignore  AGENTS.md  BUILDER-LIVE-WRITE-PLAN.md  CLAUDE.md  DESKTOP_APP_OPEN_CTA_CHANGES.md  DEVELOPMENT.md  HANDOFF.md  MULTI-SOURCE-FEDERATION-PLAN.md  OVERNIGHT_QA_CRITICAL_FINDINGS.md  OVERNIGHT_QA_SUMMARY.md  PORT-GUIDE-design-followups.md  README.md  STREAMING_RECORDING_CHANGES.md  TEST-PLAN.md  emit-plan-skills.mts  index.html  learnings.md  mcp.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qa-settings-capture.ts  tsconfig.base.json  tsconfig.json  wrangler-analytics.toml  wrangler-calendar.toml  wrangler-calorie-tracker.toml  wrangler-chat.toml  wrangler-clips.toml  wrangler-content.toml  wrangler-dispatch.toml  wrangler-dispatcher.toml  wrangler-enrichment.toml  wrangler-forms.toml  wrangler-issues.toml  wrangler-mail.toml  (+4 more)
.abacusai/: config.json
.changeset/: 404-home-only.md  a2a-action-route-auth.md  a2a-activity-response-segments.md  a2a-cold-start-readiness.md  ab-test-hosted-luna-default.md  acp-first-harness.md  action-get-array-params.md  action-route-error-capture.md  adaptive-shared-sync.md  add-atlassian-mcp-preset.md  add-chat-history-list-component.md  add-clay-provider-api.md  add-code-agent-new-session-extension.md  add-codex-local-signin.md  add-error-screen-feedback.md  add-native-recovery-mnemonic-parity.md  agent-chat-builder-signin.md  agent-chat-idle-recovery.md  agent-chat-prefill-submit.md  agent-chat-transient-continuations.md  agent-native-builder-connect-attribution.md  agent-native-doctor-v1.md  agent-native-invoke-helper.md  agent-native-template-sync.md  agent-team-code-hub-runs.md  agent-teams-message-queue.md  agent-toggle-close-icon.md  agent-tool-flag-and-ask-question.md  agent-tool-search-plan-mode.md  allow-deploy-email-config.md  allow-final-guard-retries.md  analytics-card-tooltips.md  api-reference-hover-layout.md  architecture-plan-diagrams.md  assets-app-skills.md  assets-mcp-picker-handoff.md  assets-mcp-picker.md  async-mcp-local-auth.md  attested-migration-recovery.md  automation-connectors-runtime.md  (+580 more)
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json
.github/: recap-scan-allowlist
advisor-plans/: 001-one-click-templates-restore-vs-rebuild.md  001-require-same-origin-realtime-voice.md  002-agent-inbox-review-queue-primitive.md  002-cancel-bigquery-timeouts.md  003-agent-native-doctor-guards-cli.md  004-processors-http-chat-seam.md  005-automations-deterministic-fail-fast.md  README.md
animation-plans/: 001-toolkit-overlay-primitives.md  002-core-motion-tokens-and-chat.md  003-clips-recording-gpu.md  004-clips-player-scrubber.md  README.md  (+7 more)
templates/clips/desktop/src-tauri/: Assets.car  Cargo.toml  Info.plist  agent-native.icns  tauri.conf.json
templates/clips/desktop/src-tauri/capabilities/: default.json
templates/clips/desktop/src-tauri/icons/: icon.icns
templates/clips/desktop/src-tauri/src/: accessibility.rs  adhoc_meetings_watcher.rs  config.rs  eventkit.rs  lib.rs  logfile.rs  main.rs  meetings_watcher.rs  native_screen.rs  native_speech.rs  notifications.rs  recording_indicator.rs  rewind_chapters.rs  rewind_egress.rs  screen_memory.rs  shortcuts.rs  silence_detector.rs  state.rs  system_audio.rs  tray.rs  tray_meetings.rs  util.rs  whisper_model.rs  whisper_speech.rs
templates/clips/desktop/src-tauri/src/capture/: macos.rs  mod.rs  windows.rs
templates/clips/desktop/src-tauri/src/clips/: mod.rs
templates/clips/desktop/src-tauri/src/native_screen/: custom_capture.rs  live_upload.rs
(+7242 files in other folders)
