[package]
name = "clips-tray"
version = "0.1.0"
description = "Clips — menu-bar tray app (Tauri 2)"
authors = ["Clips"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clips_tray_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Force the dev binary name so macOS shows "Clips" in the Dock / app switcher
# (macOS derives the display name from the executable filename when the app
# is unbundled — e.g. during `tauri dev`). Bundled .app builds read the name
# from `productName` in tauri.conf.json instead.
[[bin]]
name = "Clips"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
  "macos-private-api",
] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
