[package]
name = "clips-tray"
version = "0.1.1"
description = "Clips — menu-bar tray app (Tauri 2)"
authors = ["Clips"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clips_tray_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Force the dev binary name so macOS shows "Clips" in the Dock / app switcher
# (macOS derives the display name from the executable filename when the app
# is unbundled — e.g. during `tauri dev`). Bundled .app builds read the name
# from `productName` in tauri.conf.json instead.
[[bin]]
name = "Clips"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
  "macos-private-api",
] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# macOS-only: raw Objective-C messaging so we can flip NSWindow's sharingType
# to NSWindowSharingNone and hide every overlay window (popover, bubble,
# toolbar, countdown, signin) from screen-capture APIs. Same technique Loom,
# 1Password, and CleanShot use. Tauri already pulls objc2 0.6 in transitively,
# so requesting it here is a no-op in terms of the final dep graph.
[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = "0.25"
objc2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
